feat: add upload functionality in ui for blotter trades
